Add automatic path handling for GitHub Pages deployment - Updated Vite config with environment-aware base paths - Added utils/paths.ts for automatic image path handling - Updated all components to use getImagePath() utility - Added production build scripts - Added deployment documentation

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:prod": "NODE_ENV=production vite build",
+    "deploy": "npm run build:prod && echo 'Build completed for GitHub Pages deployment'",
     "lint": "eslint .",
     "preview": "vite preview"
   },
